--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -4,14 +4,25 @@ $gray										: #5e6673;
 $gray-dark									: #363e49;
 $gray-lightest								: #dde1e9;
 $gray-lightest2								: #f3f3f5;
+$gray-lightest3								: #dde1e9;
 $blue										: #4e8db6;
 $very-dark-gray								: #6f6f6f;
 $very-dark-grayish-blue						: #333e48;
 $dark-moderate-cyan							: #4c9688;
 $moderate-red								: #c13c3a;
+$moderate-blue								: #4e8cb5;
 $moderate-blue2								: #4E8BB4;
+$light-grayish-blue							: #dce1e9;
 $light-grayish-blue2						: #dde2ea;
 $green										: #4c988b;
+$grayish-blue								: #a7afb9;
+$grayish-blue2								: #a4c3d7;
+$grayish-blue3								: #b5bcc7;
+$grayish-blue6								: #cad0d8;
+$gray-light4								: #fcfcfc;
+$dark-grayish-blue							: #8e98a5;
+$dark-grayish-blue3							: #8e97a4;
+$moderate-cyan 								: #4eb6a4;
 
 
 
