--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -55,3 +55,5 @@ $media-expressions: (
 @import 'components/content';
 @import 'components/questions-list';
 @import 'components/audio-slideshow';
+@import 'components/question-types';
+@import 'components/custom-form';
