fixed dropdown opening issue

--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -23,8 +23,8 @@
                   <div class="header-info">
                     <time datetime="2017-12-18">1 hr</time>
                     <div ngbDropdown class="dropdown">
-                      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 5 Units </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" ngbDropdownToggle> 5 Units </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1"  ngbDropdownMenu >
                         <ul class="drop-list">
                           <li><a href="#">Cras justo odio</a></li>
                           <li><a href="#">Dapibus ac facilisis</a></li>
