--- a/src/assets/scss/layouts/_main-content.scss
+++ b/src/assets/scss/layouts/_main-content.scss
@@ -20,13 +20,15 @@
 	z-index: 999;
 	color: white;
 	
-	@include media('<tablet') {
-		position: static !important;
-	}
+	@include media('<tablet') {position: static !important;}
 	
 	&.fixed-position{
 		right: 0;
-		@include media('≥tablet') {margin-top: 0;}
+		@include media('≥tablet') {
+			position: fixed !important;
+			top: 0 !important;
+			margin-top: 0;
+		}
 		
 		+ .detail-container{
 			
