--- a/src/app/questiontype/fillintheblank/fillintheblank.component.html
+++ b/src/app/questiontype/fillintheblank/fillintheblank.component.html
@@ -1,3 +1,10 @@
-<p>
-  fillintheblank works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <h3>Fill in the Blank</h3>
+    <div class="row">
+      <div class="col-sm-6">
+        <textarea cols="30" rows="10" class="form-control text-area"></textarea>
+      </div>
+    </div>
+  </div>
+</div>
