--- a/src/app/questiontype/multiselectioncheckbox/multiselectioncheckbox.component.html
+++ b/src/app/questiontype/multiselectioncheckbox/multiselectioncheckbox.component.html
@@ -1,3 +1,23 @@
-<p>
-  multiselectioncheckbox works!
-</p>
+<div class="row">
+  <div class="col-sm-12 custom-form">
+    <h3>Multiple Select Checkbox</h3>
+    <ul class="list-unstyled rad-list">
+      <li>
+        <label for="chk-1">
+          <input id="chk-1" type="checkbox" checked=""> <span class="fake-input"></span> <span class="fake-label">Training</span> </label>
+      </li>
+      <li>
+        <label for="chk-2">
+          <input id="chk-2" type="checkbox"> <span class="fake-input"></span> <span class="fake-label">Training2</span> </label>
+      </li>
+      <li>
+        <label for="chk-3">
+          <input id="chk-3" type="checkbox"> <span class="fake-input"></span> <span class="fake-label">Training3</span> </label>
+      </li>
+      <li>
+        <label for="chk-4">
+          <input id="chk-4" type="checkbox"> <span class="fake-input"></span> <span class="fake-label">Training4</span> </label>
+      </li>
+    </ul>
+  </div>
+</div>
