--- a/src/app/questiontype/singleselectradiobutton/singleselectradiobutton.component.html
+++ b/src/app/questiontype/singleselectradiobutton/singleselectradiobutton.component.html
@@ -1,3 +1,23 @@
-<p>
-  singleselectradiobutton works!
-</p>
+<div class="row">
+  <div class="col-sm-12 custom-form">
+    <h3>Single Select Radio Button</h3>
+    <ul class="list-unstyled rad-list">
+      <li>
+        <label for="radio-3">
+          <input id="radio-3" name="group1" type="radio" checked=""> <span class="fake-input"></span> <span class="fake-label">Training</span> </label>
+      </li>
+      <li>
+        <label for="radio-3">
+          <input id="radio-3" name="group1" type="radio"> <span class="fake-input"></span> <span class="fake-label">Training2</span> </label>
+      </li>
+      <li>
+        <label for="radio-4">
+          <input id="radio-4" name="group1" type="radio"> <span class="fake-input"></span> <span class="fake-label">Training3</span> </label>
+      </li>
+      <li>
+        <label for="radio-5">
+          <input id="radio-5" name="group1" type="radio"> <span class="fake-input"></span> <span class="fake-label">Training4</span> </label>
+      </li>
+    </ul>
+  </div>
+</div>
