--- a/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
+++ b/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
@@ -1,3 +1,21 @@
-<p>
-  singleselectdropdown works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <h3>Single Select Drop Down</h3>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="select-block">
+          <div class="dropdown">
+            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton1" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span class="btn-text">True</span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <ul class="drop-list">
+                <li><a href="#">true</a></li>
+                <li><a href="#">false</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
