--- a/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
+++ b/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
@@ -1,3 +1,22 @@
-<p>
-  truefalsedropdown works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <h3>True False Drop Down</h3>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="select-block">
+          <div class="dropdown">
+            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span class="btn-text">3</span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <ul class="drop-list">
+                  <li *ngFor="let n of question['choices'] let i = index">
+                      <a href="javascript:void(0)" (click)="onOptionChanged(n.answer,i)" class="nav-link">{{n.answer}}</a>
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
