--- a/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
+++ b/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <h3>True False Drop Down</h3>
+    <h3 [innerHTML]="question.question | safeHtml"></h3>
     <div class="row">
       <div class="col-sm-6">
         <div class="select-block">
