--- a/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
+++ b/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-sm-12 custom-form">
-    <h3>True False Radio Button</h3>
+    <h3 [innerHTML]="question.question | safeHtml"></h3>
     <ul class="list-inline rad-list">
-      <li class="list-inline-item">
-        <label for="radio-1">
-          <input id="radio-1" name="group1" type="radio" checked=""> <span class="fake-input"></span> <span class="fake-label">Training</span> </label>
-      </li>
-      <li class="list-inline-item">
-        <label for="radio-2">
-          <input id="radio-2" name="group1" type="radio"> <span class="fake-input"></span> <span class="fake-label">Training</span> </label>
-      </li>
+        <li class="list-inline-item" *ngFor="let n of question['choices'] let i = index">
+            <label for={{i}}>
+              <input type="radio" 
+              (change)="onOptionChanged(i)"  id={{i}} name="group1"  [checked]="isChecked == i" value="on" >
+              <span class="fake-input"></span>
+              <span class="fake-label">{{n.answer}}</span>
+            </label>
+          </li>
     </ul>
   </div>
 </div>
