updated sequence styles

--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -41,7 +41,7 @@
                     <span class="sub-head">Module</span>
                     <h6 class="card-title"><a href="javascript:void(0)" (click)="DetailCourse($event , i )" >{{course.name}}</a></h6>
                   </div>
-                  <p class="card-text">Explore our new user experience and learn how to enable it for your <a href="#">organization</a>.</p>
+                  <p>{{course.description}}</p>
                 </div>
                 <footer class="footer clearfix">
                   <ul class="icons-list list-inline">
