--- a/src/assets/scss/layouts/_main-content.scss
+++ b/src/assets/scss/layouts/_main-content.scss
@@ -23,7 +23,9 @@
 	@include media('<tablet') {position: static !important;}
 	
 	&.fixed-position{
+		left: 0;
 		right: 0;
+		
 		@include media('≥tablet') {
 			position: fixed !important;
 			top: 0 !important;
