add submit button

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -80,6 +80,9 @@
         </aside>
         <div id="content">
           <div  #parent></div>
+          <div class="btn-holder">
+            <a href="javascript:void(0)" class="btn btn-lg btn-success">Submit</a>
+          </div>
         </div>
       
     </div>
