--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(../css/MyFontsWebfontsKit.css);
-.clearfix:after, .video-block:after, .cell-holder:after {
+.clearfix:after, #content .section:after, .video-block:after, .cell-holder:after {
   display: block;
   content: '';
   clear: both;
@@ -17,7 +17,7 @@
   list-style: none;
 }
 
-.clearfix:after, .video-block:after, .cell-holder:after {
+.clearfix:after, #content .section:after, .video-block:after, .cell-holder:after {
   content: '';
   display: block;
   clear: both;
@@ -117,7 +117,7 @@ button:hover {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-  z-index: 999;
+  z-index: 9999;
   color: white;
 }
 
@@ -720,7 +720,6 @@ audio {
   -moz-border-radius: 0;
   -ms-border-radius: 0;
   border-radius: 0;
-  overflow: hidden;
   padding: 10px 0;
   margin: 0 0 20px;
 }
