--- a/src/assets/scss/components/_content.scss
+++ b/src/assets/scss/components/_content.scss
@@ -13,8 +13,8 @@
 	}
 	
 	.section{
+		@extend %clearfix;
 		@include border-radius(0);
-		overflow: hidden;
 		padding: 10px 0;
 		margin: 0 0 20px;
 		
