--- a/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
+++ b/src/app/questiontype/truefalsedropdown/truefalsedropdown.component.html
@@ -5,7 +5,8 @@
       <div class="col-sm-6">
         <div class="select-block">
           <div ngbDropdown class="dropdown">
-            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton" type="button" ngbDropdownToggle> <span class="btn-text">3</span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
+            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton" type="button" ngbDropdownToggle> <span id="TruefalsedropdownComponent" class="btn-text">Select
+              </span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" ngbDropdownMenu >
               <ul class="drop-list">
