--- a/src/app/questiontype/fillintheblank/fillintheblank.component.html
+++ b/src/app/questiontype/fillintheblank/fillintheblank.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-6">
           <div class="col-sm-8">
-              <input  (ngModelChange)="onOptionChanged($event)"  class="form-control">
+              <input  (input)="onOptionChanged($event.target.value)"  class="form-control">
             </div>
       </div>
     </div>
