--- a/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
+++ b/src/app/questiontype/singleselectdropdown/singleselectdropdown.component.html
@@ -5,7 +5,8 @@
       <div class="col-sm-6">
         <div class="select-block">
           <div class="dropdown" ngbDropdown>
-            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton1" type="button" ngbDropdownToggle> <span class="btn-text">True</span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
+            <button class="btn btn-dropmenu dropdown-toggle" id="dropdownMenuButton1" type="button" ngbDropdownToggle> 
+              <span id="SingleselectdropdownComponent" class="btn-text">Select</span> <span class="drop-icon"><span class="fa fa-angle-down"></span></span>
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1" ngbDropdownMenu >
               <ul class="drop-list">
