working on question

--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -19,7 +19,7 @@
             <article  class="card">
               <div class="card-block">
                 <header class="header clearfix">
-                  <div class="img-holder"><img src="assets/images/icon-img1.svg" class="img-fluid" alt="course Icon"></div>
+                  <div class="img-holder"><img [attr.src]="getRandomImage(i) | safeUrl" class="img-fluid" alt="course Icon"></div>
                   <div class="header-info">
                     <time datetime="2017-12-18">1 hr</time>
                     <div ngbDropdown class="dropdown">
@@ -41,7 +41,7 @@
                     <span class="sub-head">Module</span>
                     <h6 class="card-title"><a href="javascript:void(0)" (click)="DetailCourse($event , i )" >{{course.name}}</a></h6>
                   </div>
-                  {{course.description}}
+                  <p [innerHTML]="course.description | safeHtml"></p>
                 </div>
                 <footer class="footer clearfix">
                   <ul class="icons-list list-inline">
