--- a/src/app/questiontype/fillintheblank/fillintheblank.component.html
+++ b/src/app/questiontype/fillintheblank/fillintheblank.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <h3 [innerHTML]="question.question | safeHtml"></h3>
+    <h3 [innerHTML]="content.name | safeHtml"></h3>
     <div class="row">
       <div class="col-sm-6">
           <div class="col-sm-8">
