--- a/src/app/questiontype/fillblanktable/fillblanktable.component.html
+++ b/src/app/questiontype/fillblanktable/fillblanktable.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <h3>Multiple Fill in the Blank</h3>
+    <h3 [innerHTML]="content.name | safeHtml"></h3>
     <table class="table fill-in-table no-border">
       <thead>
           <tr *ngFor="let h of head let i = index" >
