--- a/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
+++ b/src/app/questiontype/truefalseradionbutton/truefalseradionbutton.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12 custom-form">
-    <h3 [innerHTML]="question.question | safeHtml"></h3>
+    <h3 [innerHTML]="content.name | safeHtml"></h3>
     <ul class="list-inline rad-list">
         <li class="list-inline-item" *ngFor="let n of question['choices'] let i = index">
             <label [attr.for]="'r'+i" >
